--- a/apps/docs/src/content/once-ui/components/dropdownWrapper.mdx
+++ b/apps/docs/src/content/once-ui/components/dropdownWrapper.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/components/dropdownWrapper.mdx"
 github: "components/DropdownWrapper.tsx"
 navLabel: "DropdownWrapper"
 navIcon: "components"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 DropdownWrapper is a container component that handles the positioning and state management of dropdown menus. It provides a flexible way to create custom dropdown interfaces with various trigger elements and dropdown contents. It supports keyboard navigation when used with `Option` components.
