--- a/apps/docs/src/content/once-ui/components/emojiPicker.mdx
+++ b/apps/docs/src/content/once-ui/components/emojiPicker.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/components/emojiPicker.mdx"
 github: "components/EmojiPicker.tsx"
 navLabel: "EmojiPicker"
 navIcon: "components"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 The `EmojiPicker` component allows you to select and insert emojis from categories.
