--- a/apps/docs/src/content/once-ui/components/grid.mdx
+++ b/apps/docs/src/content/once-ui/components/grid.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/components/grid.mdx"
 github: "components/Grid.tsx"
 navLabel: "Grid"
 navIcon: "components"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 Learn more about the `Grid` component usage in the [Structure](/once-ui/basics/structure) section.
