--- a/apps/docs/src/content/once-ui/components/hoverCard.mdx
+++ b/apps/docs/src/content/once-ui/components/hoverCard.mdx
@@ -48,7 +48,7 @@ The `HoverCard` component is a syntactic sugar for the `Animation` component wit
   codes={[
     {
       language: "tsx",
-      label: "Rich content",
+      label: "HoverCard",
       code:
 `<HoverCard
     trigger={<Avatar size="l" src="/images/avatar.jpg" />}
