--- a/apps/docs/src/content/once-ui/modules/kbar.mdx
+++ b/apps/docs/src/content/once-ui/modules/kbar.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/modules/kbar.mdx"
 github: "modules/navigation/Kbar.tsx"
 navLabel: "Kbar"
 navIcon: "modules"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 The `Kbar` component provides a powerful command palette for your application, allowing users to quickly navigate and perform actions using keyboard shortcuts. It enhances productivity by providing a searchable interface for commands and navigation.
