--- a/apps/docs/src/content/once-ui/components/flex.mdx
+++ b/apps/docs/src/content/once-ui/components/flex.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/components/flex.mdx"
 github: "components/Flex.tsx"
 navLabel: "Flex"
 navIcon: "components"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 Learn more about the `Flex` component usage in the [Structure](/once-ui/basics/structure) section.
