fix: MatrixFx barrel export

--- a/apps/docs/src/content/once-ui/effects/matrixFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/matrixFx.mdx
@@ -2,10 +2,10 @@
 title: "MatrixFx"
 summary: "The MatrixFx component creates an animated dot matrix reveal effect using native Canvas 2D API."
 updatedAt: "2025-10-13"
-docs: "once-ui/components/MatrixFx.mdx"
+docs: "once-ui/effects/MatrixFx.mdx"
 github: "components/MatrixFx.tsx"
 navLabel: "MatrixFx"
-navIcon: "components"
+navIcon: "sparkle"
 navTag: "New"
 navTagVariant: "cyan"
 ---
