--- a/apps/docs/src/content/once-ui/effects/tiltFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/tiltFx.mdx
@@ -6,7 +6,8 @@ docs: "once-ui/effects/tiltFx.mdx"
 github: "components/TiltFx.tsx"
 navLabel: "TiltFx"
 navIcon: "sparkle"
-
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 TiltFx creates a depth-based tilt animation that follows the user's mouse cursor. The effect is driven by `rotateX`/`rotateY` transforms and resets on mouse leave. It's designed for hoverable visual elements like images or feature blocks.
