docs: content updates

--- a/apps/docs/src/content/once-ui/effects/shineFx.mdx
+++ b/apps/docs/src/content/once-ui/effects/shineFx.mdx
@@ -179,11 +179,11 @@ ShineFx works with all Text component variants and styling props.
     Display variant
 </ShineFx>
 
-<ShineFx variant="heading-default-l" onBackground="brand-strong">
+<ShineFx variant="heading-default-l" onBackground="brand-medium">
     Heading with color
 </ShineFx>
 
-<ShineFx variant="body-default-m">
+<ShineFx variant="body-default-m" onBackground="danger-weak">
     Body text shine effect
 </ShineFx>`,
       language: "tsx",
