--- a/apps/docs/src/content/once-ui/contexts/layoutProvider.mdx
+++ b/apps/docs/src/content/once-ui/contexts/layoutProvider.mdx
@@ -6,8 +6,6 @@ docs: "once-ui/contexts/layoutProvider.mdx"
 github: "contexts/LayoutProvider.tsx"
 navLabel: "LayoutProvider"
 navIcon: "chip"
-navTag: "New"
-navTagVariant: "cyan"
 ---
 
 The `LayoutProvider` component is a context provider that creates a listener for the Flex and Grid components to track window size.
@@ -35,7 +33,7 @@ Wrap your app with `LayoutProvider`.
 
 ## Advanced setup
 
-You can pass a breakpoint object to the `LayoutProvider`. These breakpoints will only be used by the Flex and Grid components to handle runtime logic, such as `hide` and `style`. Utility classes will be applied at the standard breakpoints.
+You can pass a breakpoint object to the `LayoutProvider`.
 
 <CodeBlock
   marginTop="16"
