docs: update design and content

--- a/apps/docs/src/content/products/supabase-starter/quick-start.mdx
+++ b/apps/docs/src/content/products/supabase-starter/quick-start.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Quick start"
-summary: "Magic Agent is a deployment-ready chatbot template built with the Vercel AI SDK."
-image: "/images/docs/magic-agent.jpg"
+summary: "Supabase Starter is a deployment-ready web-app template built with Supabase auth, Upstash Redis and Once UI."
+image: "/images/docs/supabase-starter.jpg"
 updatedAt: "2025-08-04"
 navLabel: "Quick start"
 navIcon: "learn"
