--- a/apps/docs/src/content/once-ui/components/hover.mdx
+++ b/apps/docs/src/content/once-ui/components/hover.mdx
@@ -12,18 +12,14 @@ navTagVariant: "cyan"
 
 The `Hover` component wraps any element and displays an overlay on top when the user hovers over it or focuses on it. It's perfect for creating interactive cards with hover effects, image overlays, or any content that needs to reveal additional information on interaction.
 
-**Touch behavior:** By default (`touch="disable"`), the hover effect is disabled on touch devices. You can set `touch="enable"` to allow hover interactions, or `touch="display"` to always show the overlay on touch devices.
-
 <CodeBlock
   marginTop="16"
   marginBottom="24"
   preview={
-    <Row fillWidth horizontal="center">
       <Hover
-        maxWidth={24}
-        radius="l-4"
+        tabIndex={-1}
         trigger={
-          <Card padding="8" direction="column" radius="l-4">
+          <Card maxWidth={24} padding="8" direction="column" radius="l-8" href="#">
             <Media
               fillWidth
               aspectRatio="16 / 9"
@@ -41,19 +37,11 @@ The `Hover` component wraps any element and displays an overlay on top when the 
           </Card>
         }
         overlay={
-          <Flex
-            fill
-            background="overlay"
-            align="center"
-            center
-          >
-            <Text variant="heading-strong-l" onSolid="neutral-strong">
-              Overlay content
-            </Text>
-          </Flex>
+          <Tag position="absolute" top="24" right="24">
+            New!
+          </Tag>
         }
       />
-    </Row>
   }
   codes={[
     {
@@ -61,10 +49,9 @@ The `Hover` component wraps any element and displays an overlay on top when the 
       label: "Hover",
       code:
 `<Hover
-    maxWidth={24}
-    radius="l-4"
+    tabIndex={-1}
     trigger={
-      <Card padding="8" direction="column" radius="l-4">
+      <Card maxWidth={24} padding="8" direction="column" radius="l-8" href="#">
         <Media
           fillWidth
           aspectRatio="16 / 9"
@@ -82,16 +69,9 @@ The `Hover` component wraps any element and displays an overlay on top when the 
       </Card>
     }
     overlay={
-      <Flex
-        fill
-        background="overlay"
-        align="center"
-        center
-      >
-        <Text variant="heading-strong-l" onSolid="neutral-strong">
-          Overlay content
-        </Text>
-      </Flex>
+      <Tag position="absolute" top="24" right="24">
+        New!
+      </Tag>
     }
 />`,
     }
@@ -100,38 +80,41 @@ The `Hover` component wraps any element and displays an overlay on top when the 
 
 ## Delay
 
-Add a delay before the overlay appears to prevent accidental triggers.
+Add a delay before the overlay appears or disappears with the `delay` and `hideDelay` props.
 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
   preview={
-    <Row fillWidth horizontal="center">
-      <Hover
-        fillWidth
-        style={{ maxWidth: '24rem' }}
-        delay={300}
-        trigger={
-          <Card padding="l" direction="column" gap="12">
-            <Text variant="heading-strong-m">Delayed hover</Text>
-            <Text onBackground="neutral-weak" variant="body-default-s">
-              The overlay will appear after 300ms.
-            </Text>
-          </Card>
-        }
-        overlay={
-          <Flex
+    <Hover
+      tabIndex={-1}
+      delay={500}
+      hideDelay={1000}
+      trigger={
+        <Card maxWidth={24} padding="8" direction="column" radius="l-8" href="#">
+          <Media
             fillWidth
-            fillHeight
-            background="rgba(0, 100, 200, 0.8)"
-            align="center"
-            justify="center"
-          >
-            <Icon name="check" size="xl" style={{ color: 'white' }} />
-          </Flex>
-        }
-      />
-    </Row>
+            aspectRatio="16 / 9"
+            radius="l"
+            alt="Example"
+            src="/images/docs/once-ui/vibe-coding-light.jpg"
+            sizes="480px"
+          />
+          <Column fillWidth padding="20" gap="8">
+            <Text variant="heading-strong-m">Hover over me</Text>
+            <Text onBackground="neutral-weak" variant="body-default-s">
+              Move your cursor over this card to see the overlay effect.
+            </Text>
+          </Column>
+        </Card>
+      }
+      overlay={
+        <Row fill horizontal="center" padding="32">
+          <Background top="0" left="0" position="absolute" gradient={{display: true, colorStart: "page-background", y: 0, width: 300, height: 50}} radius="l-8"/>
+          <Row textVariant="heading-strong-m">Read article</Row>
+        </Row>
+      }
+    />
   }
   codes={[
     {
@@ -139,121 +122,33 @@ Add a delay before the overlay appears to prevent accidental triggers.
       label: "Delay",
       code:
 `<Hover
-  fillWidth
-  delay={300}
-  trigger={
-    <Card padding="l" direction="column" gap="12">
-      <Text variant="heading-strong-m">Delayed hover</Text>
-      <Text onBackground="neutral-weak" variant="body-default-s">
-        The overlay will appear after 300ms.
-      </Text>
-    </Card>
-  }
-  overlay={
-    <Flex
-      fillWidth
-      fillHeight
-      background="rgba(0, 100, 200, 0.8)"
-      align="center"
-      justify="center"
-    >
-      <Icon name="check" size="xl" style={{ color: 'white' }} />
-    </Flex>
-  }
-/>`,
+    tabIndex={-1}
+    delay={500}
+    hideDelay={1000}
+    trigger={
+      <Card maxWidth={24} padding="8" direction="column" radius="l-8" href="#">
+        <Media
+          fillWidth
+          aspectRatio="16 / 9"
+          radius="l"
+          alt="Example"
+          src="/images/docs/once-ui/vibe-coding-light.jpg"
+          sizes="480px"
+        />
+        <Column fillWidth padding="20" gap="8">
+          <Text variant="heading-strong-m">Hover over me</Text>
+          <Text onBackground="neutral-weak" variant="body-default-s">
+            Move your cursor over this card to see the overlay effect.
+          </Text>
+        </Column>
+      </Card>
     }
-  ]}
-/>
-
-## Custom overlay styling
-
-Customize the overlay appearance with `overlayClassName` and `overlayStyle` props.
-
-<CodeBlock
-  marginTop="16"
-  marginBottom="24"
-  preview={
-    <Row fillWidth horizontal="center" gap="16">
-      <Hover
-        fillWidth
-        style={{ maxWidth: '16rem' }}
-        trigger={
-          <Card padding="m" align="center" justify="center" style={{ height: '12rem' }}>
-            <Text variant="heading-strong-m">Gradient</Text>
-          </Card>
-        }
-        overlay={
-          <Flex
-            fillWidth
-            fillHeight
-            align="end"
-            justify="center"
-            padding="m"
-            style={{
-              background: 'linear-gradient(to top, rgba(0,0,0,0.8), transparent)'
-            }}
-          >
-            <Text variant="label-default-s" style={{ color: 'white' }}>
-              Bottom gradient
-            </Text>
-          </Flex>
-        }
-      />
-      <Hover
-        fillWidth
-        style={{ maxWidth: '16rem' }}
-        trigger={
-          <Card padding="m" align="center" justify="center" style={{ height: '12rem' }}>
-            <Text variant="heading-strong-m">Blur</Text>
-          </Card>
-        }
-        overlay={
-          <Flex
-            fillWidth
-            fillHeight
-            align="center"
-            justify="center"
-            style={{
-              backdropFilter: 'blur(8px)',
-              background: 'rgba(255, 255, 255, 0.1)'
-            }}
-          >
-            <Text variant="heading-strong-l" style={{ color: 'white' }}>
-              Blurred
-            </Text>
-          </Flex>
-        }
-      />
-    </Row>
-  }
-  codes={[
-    {
-      language: "tsx",
-      label: "Custom styling",
-      code:
-`<Hover
-  fillWidth
-  trigger={
-    <Card padding="m" align="center" justify="center" style={{ height: '12rem' }}>
-      <Text variant="heading-strong-m">Gradient</Text>
-    </Card>
-  }
-  overlay={
-    <Flex
-      fillWidth
-      fillHeight
-      align="end"
-      justify="center"
-      padding="m"
-      style={{
-        background: 'linear-gradient(to top, rgba(0,0,0,0.8), transparent)'
-      }}
-    >
-      <Text variant="label-default-s" style={{ color: 'white' }}>
-        Bottom gradient
-      </Text>
-    </Flex>
-  }
+    overlay={
+      <Row fill horizontal="center" padding="32">
+        <Background top="0" left="0" position="absolute" gradient={{display: true, colorStart: "page-background", y: 0, width: 300, height: 50}} radius="l-8"/>
+        <Row textVariant="heading-strong-m">Read article</Row>
+      </Row>
+    }
 />`,
     }
   ]}
@@ -261,40 +156,32 @@ Customize the overlay appearance with `overlayClassName` and `overlayStyle` prop
 
 ## Accessibility
 
-The component supports keyboard navigation by default. When `showOnFocus` is enabled (default), the overlay will appear when the trigger receives focus, making it accessible for keyboard users.
+The component supports keyboard navigation. For non-focusable triggers, add `tabIndex={0}` to make the wrapper keyboard-accessible. If your trigger is already focusable (like a Card with `href`), use `tabIndex={-1}` to prevent duplicate focus stops.
 
 <CodeBlock
   marginTop="16"
   marginBottom="24"
   preview={
-    <Row fillWidth horizontal="center">
-      <Hover
-        fillWidth
-        style={{ maxWidth: '24rem' }}
-        showOnFocus={true}
-        trigger={
-          <Card padding="l" direction="column" gap="12">
-            <Text variant="heading-strong-m">Keyboard accessible</Text>
-            <Text onBackground="neutral-weak" variant="body-default-s">
-              Tab to this card to see the overlay with keyboard navigation.
-            </Text>
-          </Card>
-        }
-        overlay={
-          <Flex
-            fillWidth
-            fillHeight
-            background="rgba(100, 50, 200, 0.8)"
-            align="center"
-            justify="center"
-          >
-            <Text variant="heading-strong-l" style={{ color: 'white' }}>
-              Focused!
-            </Text>
-          </Flex>
-        }
-      />
-    </Row>
+    <Hover
+      trigger={
+        <Card padding="l" direction="column" gap="12" maxWidth={24} center align="center" radius="l" tabIndex={0}>
+          <Text variant="heading-strong-m">Keyboard accessible</Text>
+          <Text onBackground="neutral-weak" variant="body-default-s">
+            Tab to this card to see the overlay
+          </Text>
+        </Card>
+      }
+      overlay={
+        <Column fill padding="l" gap="12" background="surface" border="neutral-medium" center align="center" radius="l">
+          <Text variant="heading-strong-l">
+            Focused!
+          </Text>
+          <Text onBackground="neutral-weak" variant="body-default-s">
+            Showing an overlay
+          </Text>
+        </Column>
+      }
+    />
   }
   codes={[
     {
@@ -302,29 +189,104 @@ The component supports keyboard navigation by default. When `showOnFocus` is ena
       label: "Accessibility",
       code:
 `<Hover
-  fillWidth
-  showOnFocus={true}
-  trigger={
-    <Card padding="l" direction="column" gap="12">
-      <Text variant="heading-strong-m">Keyboard accessible</Text>
-      <Text onBackground="neutral-weak" variant="body-default-s">
-        Tab to this card to see the overlay with keyboard navigation.
-      </Text>
-    </Card>
+    trigger={
+      <Card padding="l" direction="column" gap="12" maxWidth={24} center align="center" radius="l" tabIndex={0}>
+        <Text variant="heading-strong-m">Keyboard accessible</Text>
+        <Text onBackground="neutral-weak" variant="body-default-s">
+          Tab to this card to see the overlay
+        </Text>
+      </Card>
+    }
+    overlay={
+      <Column fill padding="l" gap="12" background="surface" border="neutral-medium" center align="center" radius="l">
+        <Text variant="heading-strong-l">
+          Focused!
+        </Text>
+        <Text onBackground="neutral-weak" variant="body-default-s">
+          Showing an overlay
+        </Text>
+      </Column>
+    }
+/>`,
+    }
+  ]}
+/>
+
+By default, the hover effect is disabled on touch devices. You can set `touch="enable"` to allow hover interactions, or `touch="display"` to always show the overlay on touch devices.
+
+## Interactive
+
+By default, the overlay is not interactive and click events are passed through to the trigger. You can set `interactive` to make the overlay interactive.
+
+<Feedback marginBottom="24" marginTop="16">Be careful when using interactive overlays, since they prevent click events from reaching the trigger.</Feedback>
+
+<CodeBlock
+  marginTop="16"
+  marginBottom="24"
+  preview={
+    <Hover
+      tabIndex={-1}
+      interactive
+      trigger={
+        <Card maxWidth={24} padding="8" direction="column" radius="l-8">
+          <Media
+            fillWidth
+            aspectRatio="16 / 9"
+            radius="l"
+            alt="Example"
+            src="/images/docs/once-ui/vibe-coding-light.jpg"
+            sizes="480px"
+          />
+          <Column fillWidth padding="20" gap="8">
+            <Text variant="heading-strong-m">Hover over me</Text>
+            <Text onBackground="neutral-weak" variant="body-default-s">
+              Move your cursor over this card to see the overlay effect.
+            </Text>
+          </Column>
+        </Card>
+      }
+      overlay={
+        <Row fill horizontal="center" padding="32">
+          <Button href="#">
+            Read article
+          </Button>
+        </Row>
+      }
+    />
   }
-  overlay={
-    <Flex
-      fillWidth
-      fillHeight
-      background="rgba(100, 50, 200, 0.8)"
-      align="center"
-      justify="center"
-    >
-      <Text variant="heading-strong-l" style={{ color: 'white' }}>
-        Focused!
-      </Text>
-    </Flex>
-  }
+  codes={[
+    {
+      language: "tsx",
+      label: "Hover",
+      code:
+`<Hover
+    tabIndex={-1}
+    interactive
+    trigger={
+      <Card maxWidth={24} padding="8" direction="column" radius="l-8">
+        <Media
+          fillWidth
+          aspectRatio="16 / 9"
+          radius="l"
+          alt="Example"
+          src="/images/docs/once-ui/vibe-coding-light.jpg"
+          sizes="480px"
+        />
+        <Column fillWidth padding="20" gap="8">
+          <Text variant="heading-strong-m">Hover over me</Text>
+          <Text onBackground="neutral-weak" variant="body-default-s">
+            Move your cursor over this card to see the overlay effect.
+          </Text>
+        </Column>
+      </Card>
+    }
+    overlay={
+      <Row fill horizontal="center" padding="32">
+        <Button href="#">
+          Read article
+        </Button>
+      </Row>
+    }
 />`,
     }
   ]}
@@ -334,15 +296,13 @@ The component supports keyboard navigation by default. When `showOnFocus` is ena
 
 <PropsTable
   content={[
-    ["trigger", "ReactNode", "The element to wrap (e.g., Card, Image)"],
-    ["overlay", "ReactNode", "Content to display on hover/focus"],
-    ["delay", "number", "Delay in milliseconds before showing the overlay (default: 0)"],
-    ["hideDelay", "number", "Delay in milliseconds before hiding the overlay (default: 0)"],
-    ["disabled", "boolean", "Disable hover functionality (default: false)"],
-    ["showOnFocus", "boolean", "Show overlay on keyboard focus (default: true)"],
-    ["touch", "'disable' | 'enable' | 'display'", "Touch device behavior: 'disable' (default) - no hover, 'enable' - allow hover, 'display' - always show overlay"],
-    ["overlayClassName", "string", "Custom className for the overlay"],
-    ["overlayStyle", "React.CSSProperties", "Custom inline styles for the overlay"],
+    ["trigger", "ReactNode"],
+    ["overlay", "ReactNode"],
+    ["interactive", "boolean", "false"],
+    ["delay", "number", "0"],
+    ["hideDelay", "number", "0"],
+    ["disabled", "boolean", "false"],
+    ["touch", ["disable", "enable", "display"], "disable"],
     ["...flex"]
   ]}
 />
