docs: minor content adjustments

--- a/apps/docs/src/content/once-ui/basics/components.mdx
+++ b/apps/docs/src/content/once-ui/basics/components.mdx
@@ -4,7 +4,7 @@ summary: "Once UI is an open-source design system built for indie creators, smal
 updatedAt: "2025-05-04"
 docs: "once-ui/components.mdx"
 navLabel: "Components"
-navIcon: "learn"
+navIcon: "lightbulb"
 ---
 
 Once UI components are prop-based, customizable, and built for real-world usage in modern apps. They aim to balance expressiveness with clarity—avoiding over-abstraction while supporting flexibility and scalability.
