--- a/apps/docs/src/content/once-ui/components/compareImage.mdx
+++ b/apps/docs/src/content/once-ui/components/compareImage.mdx
@@ -1,6 +1,6 @@
 ---
 title: "CompareImage"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Compare two images side by side with a slider to switch between them."
 updatedAt: "2025-05-04"
 docs: "once-ui/components/compareImage.mdx"
 github: "components/CompareImage.tsx"
