--- a/apps/docs/src/content/once-ui/components/timeline.mdx
+++ b/apps/docs/src/content/once-ui/components/timeline.mdx
@@ -5,7 +5,7 @@ updatedAt: "2025-10-14"
 docs: "once-ui/components/timeline.mdx"
 github: "components/Timeline.tsx"
 navLabel: "Timeline"
-navIcon: "component"
+navIcon: "components"
 navTag: "New"
 navTagVariant: "cyan"
 ---
