--- a/apps/docs/src/content/once-ui/config.mdx
+++ b/apps/docs/src/content/once-ui/config.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Config"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Configure Once UI with app-level design settings."
 updatedAt: "2025-05-04"
 docs: "once-ui/config.mdx"
 navLabel: "Config"
