--- a/apps/docs/src/content/once-ui/quick-start.mdx
+++ b/apps/docs/src/content/once-ui/quick-start.mdx
@@ -9,7 +9,7 @@ navIcon: "learn"
 
 ## About
 
-Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the [next generation](https://lorant.one/work/once-ui) of web applications.
+Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications. Developed and maintained by [Lorant](https://lorant.one) and the [Design Engineers Club](https://designengineers.club).
 
 ## License
 
