docs: update descriptions

--- a/apps/docs/src/content/once-ui/basics/border.mdx
+++ b/apps/docs/src/content/once-ui/basics/border.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Border"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Adjusting shape language with border radius and border style."
 updatedAt: "2025-05-04"
 docs: "once-ui/basics/border.mdx"
 navLabel: "Border"
