--- a/apps/docs/src/content/once-ui/basics/color.mdx
+++ b/apps/docs/src/content/once-ui/basics/color.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Color"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Design harmonious and accessible interfaces with Once UI's flexible color system."
 updatedAt: "2025-05-04"
 docs: "once-ui/basics/color.mdx"
 navLabel: "Color"
