--- a/apps/docs/src/content/once-ui/basics/spacing.mdx
+++ b/apps/docs/src/content/once-ui/basics/spacing.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Spacing"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Once UI's spacing system is based on a custom 8px grid."
 updatedAt: "2025-05-04"
 docs: "once-ui/basics/spacing.mdx"
 navLabel: "Spacing"
