--- a/apps/docs/src/content/once-ui/basics/structure.mdx
+++ b/apps/docs/src/content/once-ui/basics/structure.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Structure"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Once UI's layout system is built using `Flex` and `Grid`, prop-based abstractions over CSS flexbox and grid."
 updatedAt: "2025-05-04"
 docs: "once-ui/basics/structure.mdx"
 navLabel: "Structure"
