--- a/apps/docs/src/content/once-ui/basics/typography.mdx
+++ b/apps/docs/src/content/once-ui/basics/typography.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Typography"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Once UI's typography system is built using CSS variables and utility classes."
 updatedAt: "2025-05-04"
 docs: "once-ui/basics/typography.mdx"
 navLabel: "Typography"
