--- a/apps/docs/src/content/once-ui/contexts/iconProvider.mdx
+++ b/apps/docs/src/content/once-ui/contexts/iconProvider.mdx
@@ -1,6 +1,6 @@
 ---
 title: "IconProvider"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Once UI's icon provider component allows you to pass an object of icon instances to your application."
 updatedAt: "2025-06-08"
 docs: "once-ui/contexts/iconProvider.mdx"
 github: "contexts/IconProvider.tsx"
