--- a/apps/docs/src/content/once-ui/basics/components.mdx
+++ b/apps/docs/src/content/once-ui/basics/components.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Components"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "The anatomy and architecture of Once UI components: props, states, and more."
 updatedAt: "2025-05-04"
 docs: "once-ui/components.mdx"
 navLabel: "Components"
