--- a/apps/docs/src/content/once-ui/components/card.mdx
+++ b/apps/docs/src/content/once-ui/components/card.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Card"
-summary: "Once UI is an open-source design system built for indie creators, small teams, and startups to fuel the next generation of web applications."
+summary: "Once UI's card component is a versatile, fluid container for content with a simple hover effect."
 updatedAt: "2025-05-04"
 docs: "once-ui/components/card.mdx"
 github: "components/Card.tsx"
