--- a/apps/docs/src/content/once-ui/modules/headingNav.mdx
+++ b/apps/docs/src/content/once-ui/modules/headingNav.mdx
@@ -6,6 +6,8 @@ docs: "once-ui/modules/headingNav.mdx"
 github: "modules/navigation/HeadingNav.tsx"
 navLabel: "HeadingNav"
 navIcon: "modules"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 The `HeadingNav` component provides an automatic table of contents navigation that
