docs: update content and ui

--- a/apps/docs/src/content/once-ui/form-controls/datePicker.mdx
+++ b/apps/docs/src/content/once-ui/form-controls/datePicker.mdx
@@ -66,7 +66,7 @@ The DatePicker component provides an interactive calendar interface for selectin
     ["timePicker", "boolean", "false"],
     ["defaultDate", "Date"],
     ["defaultTime", "{ hours: number; minutes: number }"],
-    ["size", "'s' | 'm' | 'l'", "'m'"],
+    ["size", ["s", "m", "l"], "m"],
     ["currentMonth", "number", "Current month"],
     ["currentYear", "number", "Current year"],
     ["onMonthChange", "(increment: number) => void"],
